[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spinwx"
dynamic = ["version"]
description = 'Common components needed for spinwx'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Jason Washburn", email = "jason.washburn@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["defusedxml"]

[project.urls]
Documentation = "https://github.com/unknown/spinwx#readme"
Issues = "https://github.com/unknown/spinwx/issues"
Source = "https://github.com/unknown/spinwx"

[tool.hatch.version]
path = "spinwx/src/spinwx/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["spinwx/src/spinwx"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "black",
  "ruff",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10","3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/spinwx tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py310"]
skip-string-normalization = true

[tool.pyright]
reportMissingImports = false

[tool.ruff]
target-version = "py310"
select = ["ALL"]
ignore = []
unfixable = []

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["spinwx"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"gfs-idx/**/*" = ["INP001"]
"gfs-latest-available/**/*" = ["INP001"]


[tool.coverage.run]
source_pkgs = ["spinwx", "tests"]
branch = true
parallel = true
omit = [
  "src/spinwx/__about__.py",
]

[tool.coverage.paths]
spinwx = ["src/spinwx", "*/spinwx/src/spinwx"]
tests = ["tests", "*/spinwx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
